--- a/vignettes/_consolidated_fn.Rmd
+++ b/vignettes/_consolidated_fn.Rmd
@@ -11,7 +11,7 @@ params:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE,
                       message = F,
-                      eval = params$run_chunks_1L_lgl)
+                      eval = F)
 library(xtable) 
 library(FBaqol) 
 library(magrittr)
@@ -76,16 +76,16 @@ It is not appropriate to share the raw models created in the previous step publi
 https://dataverse.harvard.edu/privateurl.xhtml?token=37736f13-4d32-4afa-a03a-ad82c0d7d4e0
 
 ```{r include=F, eval=T}
-if(!params$run_chunks_1L_lgl){
+if(T){
   outp_smry_ls <- readRDS(paste0(path_to_write_to_1L_chr,"/I_ALL_OUTPUT_.RDS"))
 }
 ```
 
-```{r}
-outp_smry_ls$dv_ls <- NULL
-  # list(dv_nm_1L_chr = "ready4models",
-  #                              ds_url_1L_chr = "https://doi.org/10.7910/DVN/GRZRY5",
-  #                              parent_dv_dir_1L_chr = "../../../../../../Data/Dataverse")
+```{r eval=T}
+
+outp_smry_ls$dv_ls <- list(dv_nm_1L_chr = "ready4models",
+                               ds_url_1L_chr = "https://doi.org/10.7910/DVN/GRZRY5",
+                               parent_dv_dir_1L_chr = "../../../../../../Data/Dataverse")
 outp_smry_ls <- write_shareable_mdls(outp_smry_ls,
                                      sub_dir_1L_chr = "Shareable")
 ```
@@ -95,7 +95,7 @@ outp_smry_ls <- write_shareable_mdls(outp_smry_ls,
 
 Similar to the previous step, we can create a purely synthetic dataset, representative of the source data, but containing no real data on any individual.
 
-```{r}
+```{r eval=T}
 outp_smry_ls$fk_data_tb <- make_fake_ts_data(outp_smry_ls)
 ```
 
