--- a/inst/Markdown/_Reworked_First_Bit.Rmd
+++ b/inst/Markdown/_Reworked_First_Bit.Rmd
@@ -14,7 +14,7 @@ params:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(xtable) 
-library(ready4u) 
+library(TTU) 
 library(magrittr)
 ```
 
