--- a/vignettes/Replication_DS.Rmd
+++ b/vignettes/Replication_DS.Rmd
@@ -6,22 +6,23 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-```{r}
+```{r message=F}
 library(magrittr)
+library(TTU)
 ```
-# Origin and purpose of youthu replication dataset
-The replication dataset distributed with the youthu package is a purely synthetic (entirely fake) dataset that is nonetheless representative (in terms of constituent variables and their uni-variate and [to some extent] joint distributions) of the original study dataset that we used to derive the transfer to utility algorithms included in youthu. The purpose of the replication dataset is two-fold:
+# Origin and purpose of the TTU replication dataset
+The replication dataset distributed with the TTU package is a purely synthetic (entirely fake) dataset that is nonetheless representative (in terms of constituent variables and their uni-variate and [to some extent] joint distributions) of the original study dataset to which we applied the transfer to utility algorithms included in TTU. The purpose of the replication dataset is two-fold:
 
 1) to help users replicate the results in our original study (by applying the same algorithms we used to a different but similar dataset, users will be able to get broadly similar results);
 
-2) to help users trial the functions in the youthu package before potentially applying these functions to their own data.
+2) to help users trial the functions in the TTU package before potentially applying these functions to their own data.
 
 # Replication dataset dictionary
 
 An overview of the contents of the replication dataset is provided in a data dictionary that can be accessed with the following command.
 
 ```{r message=FALSE}
-dictionary_tb <- youthu::repln_ds_dict_r3
+dictionary_tb <- repln_ds_dict_r3
 ```
 
 The following lines print the data dictionary as a table.
@@ -38,7 +39,7 @@ dictionary_tb %>%
 The replication dataset itself can be accessed using the following command.
 
 ```{r}
-raw_data_tb <- youthu::replication_popl_tb 
+raw_data_tb <- replication_popl_tb 
 ```
 
 Adding variable labels makes it easier to interpret the dataset. In the following command, we add lables from the data dictionary to the replication dataset.
