--- a/vignettes/Utility_Scoring.Rmd
+++ b/vignettes/Utility_Scoring.Rmd
@@ -8,18 +8,18 @@ vignette: >
 ---
 
 ```{r warning=FALSE, message=FALSE}
-library(youthu)
+library(TTU)
 ```
 # Converting Assessment of Quality of Life Six Dimension questionnaire response to Health Utility Scores
-To derive a health utility score from the raw responses to a multi-attribute utility instrument it is necessary to implement a scoring algorithm. Scoring algorithms for the Assessment of Quality of Life Six Dimension (AQoL-6D) are publicly available in SPSS format. However, to include scoring algorithms in reproducible research workflows, it is desirable to have these algorithms available in open science languages such as R. We therefore developed R versions of the adult and adolescent versions of the AQoL-6D scoring algorithm and have made them available as part of the youthu package.
+To derive a health utility score from the raw responses to a multi-attribute utility instrument it is necessary to implement a scoring algorithm. Scoring algorithms for the Assessment of Quality of Life Six Dimension (AQoL-6D) are publicly available in SPSS format. However, to include scoring algorithms in reproducible research workflows, it is desirable to have these algorithms available in open science languages such as R. We therefore developed R versions of the adult and adolescent versions of the AQoL-6D scoring algorithm and have made them available as part of the TTU package.
 
 # Calculating scores
-To calculate AQoL 6D adolescent utility scores, a dataset with all twenty AQoL-6D questionnaire response items must be passed to the `add_adol6d_scores`{.R} function. In the following illustrative example, we use the [replication dataset](Replication_DS.html) that is included in the youthu package.
+To calculate AQoL 6D adolescent utility scores, a dataset with all twenty AQoL-6D questionnaire response items must be passed to the `add_adol6d_scores`{.R} function. In the following illustrative example, we use the [replication dataset](Replication_DS.html) that is included in the TTU package.
 
-The names of the twenty questionnaire response variables must all have a common prefix and end with the item number. In our replication dataset, they are named "aqol6d_q1", "aqol6d_q2" ... "aqol6d_q20". Details of the common prefix for the AQoL-6D response item variables, the name of the unique individual identifier variable and the desired name for the AQoL-6D adolescent utility score variable to be calculated must also be passed to the add_adol6d_scores function. The function returns an updated dataset, with additional variables that include the intermediate and final calculations for AQoL 6D adolescent utility scores.
+The names of the twenty questionnaire response variables must all have a common prefix and end with the item number. In our replication dataset, they are named "aqol6d_q1", "aqol6d_q2" ... "aqol6d_q20". Details of the common prefix for the AQoL-6D response item variables, the name of the unique individual identifier variable and the desired name for the AQoL-6D adolescent utility score variable to be calculated must also be passed to the `add_adol6d_scores`{.R} function. The function returns an updated dataset, with additional variables that include the intermediate and final calculations for AQoL 6D adolescent utility scores.
 
 ```{r results='hide', warning=F, message=FALSE}
-scored_data_tb <- add_adol6d_scores(youthu::replication_popl_tb,
+scored_data_tb <- add_adol6d_scores(replication_popl_tb,
                                               prefix_1L_chr =  "aqol6d_q",
                                               id_var_nm_1L_chr = "fkClientID",
                                               wtd_aqol_var_nm_1L_chr = "aqol6d_total_w") 
@@ -29,8 +29,8 @@ scored_data_tb <- add_adol6d_scores(youthu::replication_popl_tb,
 Before displaying the updated dataset, it may be desirable to label variables so that their meaning is clearer. The first step to do this is to create a data dictionary that extends to all variables in the updated dataset, by combining a data dictionary for the source (unscored) dataset (in our case `repln_ds_dict_r3`{.R}) with a data dictionary for a template scored dataset (`aqol_scrg_dict_r3`{.R} for this example).
 
 ```{r}
-dictionary_tb <- ready4use::bind_lups(youthu::repln_ds_dict_r3,
-                                      new_ready4_dictionary = youthu::aqol_scrg_dict_r3)
+dictionary_tb <- ready4use::bind_lups(repln_ds_dict_r3,
+                                      new_ready4_dictionary = aqol_scrg_dict_r3)
 ```
 
 Labels from the new data dictionary can then be added to our updated (scored) dataset.
