--- a/vignettes/_Explore_Candidates.Rmd
+++ b/vignettes/_Explore_Candidates.Rmd
@@ -21,61 +21,63 @@ Specify the paths to the input data and data dictionary. For this example we are
 ```{r}
 path_to_inp_data_1L_chr <- "Data" 
 dir.create(path_to_inp_data_1L_chr)
-write.csv(replication_popl_tb %>% dplyr::select(-BADS,-GAD7, -OASIS,-SCARED),"Data/data.csv", row.names=FALSE)
+write.csv(replication_popl_tb %>% dplyr::select(-BADS,-GAD7, -OASIS,-SCARED),"Data/data.csv", row.names=FALSE, col.names = T)
 write.csv(repln_ds_dict_r3,"Data/dictionary.csv", row.names=FALSE)
 ```
 
 Read the data files into local memory.
 
 ```{r message = F}
-data_df <- read.csv("Data/data.csv") 
+data_tb <- readr::read_csv("Data/data.csv") 
 dictionary_r3 <- readr::read_csv("Data/dictionary.csv") %>% ready4use::ready4_dictionary()
 ```
 
 We now calculate utility scores from study participant responses to the AQoL-6D questionnaire. [More detail about this step is provided in another vignette article](Utility_Scoring.html).
 
-```{r}
-scored_data_tb <- data_df %>% add_adol6d_scores() %>%
+```{r message=FALSE, results='hide', warning=FALSE}
+scored_data_tb <- data_tb %>% add_adol6d_scores() %>%
   ready4use::add_labels_from_dictionary(dictionary_r3) 
 ```
 
 Declare some structural properties of the dataset.
 
 ```{r}
-ds_smry_ls <- list(dep_var_nm_1L_chr <- "aqol6d_total_w",
+ds_smry_ls <- list(candidate_predrs_chr = c("K6","PHQ9"),
+                   candidate_covar_nms_chr = c("d_sex_birth_s", "SOFAS", "c_p_diag_s", "c_clinical_staging_s", "d_age",  "d_sexual_ori_s", "d_country_bir_s", "d_relation_s", "d_studying_working"),
+                   dep_var_nm_1L_chr = "aqol6d_total_w",
                    id_var_nm_1L_chr = "fkClientID",
                    round_var_nm_1L_chr = "round",
                    round_bl_val_1L_chr = "Baseline")
 ```
 
-
-
-Create a lookup table (or, as per the below example, use an existing one) with summary information on candidate predictors 
+Create a lookup table with summary information on candidate predictors. 
 
 ```{r}
-data("predictors_lup", package = "youthu") # Need to add this as a TTU class
-predictors_lup 
-candidate_predrs_chr <- predictors_lup$short_name_chr
+ds_smry_ls$predictors_lup <- TTU_predictors_lup(make_pt_TTU_predictors_lup(short_name_chr = ds_smry_ls$candidate_predrs_chr,
+                                              long_name_chr = c("K6 total score", "PHQ9 total score"),
+                                              min_val_dbl = 0,
+                                              max_val_dbl = c(24,27),
+                                              class_chr = "integer",
+                                              increment_dbl = 1,
+                                              class_fn_chr = "integer",
+                                              mdl_scaling_dbl = 0.01,
+                                              covariate_lgl = F))
 ```
 
-Specify potential covariates.
-
-```{r}
-candidate_covar_nms_chr <- c("d_sex_birth_s", "SOFAS", "c_p_diag_s", "c_clinical_staging_s", "d_age",  "d_sexual_ori_s", "d_country_bir_s", "d_relation_s", "d_studying_working")
-```
 
 Create a lookup table (or as in the below example, use an existing lookup table) with summary information about the types of models we might test.
 
 ```{r}
-data("mdl_types_lup",package = "youthu") # LUP needs to be a class of TTU
+data("mdl_types_lup",package = "TTU") # LUP needs to be a class of TTU
 mdl_types_lup
 ```
 
 Select which models from the lookup table that we wish to compare in this analysis. In this case we select all of the available options.
 
 ```{r}
-mdl_types_chr <- mdl_types_lup$short_name_chr
-choose_from_pfx_chr <- c("GLM","OLS","BET")
+mdl_smry_ls <- list(mdl_types_lup = mdl_types_lup,
+                    mdl_types_chr = mdl_types_lup$short_name_chr,
+                    choose_from_pfx_chr = c("GLM","OLS","BET"))
 ```
 
 Set a seed to facilitate reproducibility.
@@ -86,148 +88,152 @@ set.seed(seed_1L_int)
 ```
 
 ```{r}
-bl_tb <- transform_ds_for_tstng(scored_data_tb, dep_var_nm_1L_chr = dep_var_nm_1L_chr,
-        candidate_predrs_chr = candidate_predrs_chr, dep_var_max_val_1L_dbl = 0.999,
-        round_var_nm_1L_chr = round_var_nm_1L_chr, round_val_1L_chr = round_bl_val_1L_chr)
-bl_tb # Is this right? - appears to be both BL and FUP together
+bl_tb <- transform_ds_for_tstng(scored_data_tb, 
+                                dep_var_nm_1L_chr = ds_smry_ls$dep_var_nm_1L_chr,
+                                candidate_predrs_chr = ds_smry_ls$candidate_predrs_chr,
+                                dep_var_max_val_1L_dbl = 0.999,
+                                round_var_nm_1L_chr = ds_smry_ls$round_var_nm_1L_chr, 
+                                round_val_1L_chr = ds_smry_ls$round_bl_val_1L_chr)
+bl_tb 
 ```
 
 Reorder candidate predictors in descending order of correlation with the dependent variable. 
 
 ```{r}
-candidate_predrs_chr <- reorder_cndt_predrs_chr(candidate_predrs_chr,
-        data_tb = bl_tb, dep_var_nm_1L_chr = dep_var_nm_1L_chr)
+ds_smry_ls$candidate_predrs_chr <- reorder_cndt_predrs_chr(ds_smry_ls$candidate_predrs_chr,
+        data_tb = bl_tb, dep_var_nm_1L_chr = ds_smry_ls$dep_var_nm_1L_chr)
 ```
 
 Identify the candidate predictor with the highest correlation. Retrieve its description from the candidate predictors lookup table.
 
 ```{r}
-predr_var_nm_1L_chr <- candidate_predrs_chr[1]
-predr_var_desc_1L_chr <- predictors_lup %>% ready4fun::get_from_lup_obj(match_value_xx = predr_var_nm_1L_chr, match_var_nm_1L_chr = "short_name_chr", target_var_nm_1L_chr = "long_name_chr",
+mdl_smry_ls$predr_var_nm_1L_chr <- ds_smry_ls$candidate_predrs_chr[1]
+mdl_smry_ls$predr_var_desc_1L_chr <- ds_smry_ls$predictors_lup %>% ready4fun::get_from_lup_obj(match_value_xx = mdl_smry_ls$predr_var_nm_1L_chr, match_var_nm_1L_chr = "short_name_chr", target_var_nm_1L_chr = "long_name_chr",
         evaluate_lgl = F)
-predr_var_desc_1L_chr
+mdl_smry_ls$predr_var_desc_1L_chr
 ```
 
 Create a vector of all potential values of the selected predictor.
 
 ```{r}
-predr_vals_dbl <- make_predr_vals(predr_var_nm_1L_chr, predictors_lup = predictors_lup)
-predr_vals_dbl
+mdl_smry_ls$predr_vals_dbl <- make_predr_vals(mdl_smry_ls$predr_var_nm_1L_chr, candidate_predrs_lup = ds_smry_ls$predictors_lup)
+mdl_smry_ls$predr_vals_dbl
 ```
 
 Compare all candidate model types, each using only the highest correlated candidate predictor (`r predr_var_desc_1L_chr`).
 
 ```{r}
-n_folds_1L_int = 10L
-smry_of_sngl_predr_mdls_tb <- write_sngl_predr_multi_mdls_outps(data_tb = bl_tb,
-        n_folds_1L_int = n_folds_1L_int, mdl_types_chr = mdl_types_chr,
-        dep_var_nm_1L_chr = dep_var_nm_1L_chr, predr_var_nm_1L_chr = predr_var_nm_1L_chr,
-        predr_var_desc_1L_chr = predr_var_nm_1L_chr, predr_vals_dbl = predr_vals_dbl,
+mdl_smry_ls$n_folds_1L_int = 10L
+mdl_smry_ls$smry_of_sngl_predr_mdls_tb <- write_sngl_predr_multi_mdls_outps(data_tb = bl_tb,
+        n_folds_1L_int = mdl_smry_ls$n_folds_1L_int, mdl_types_chr = mdl_smry_ls$mdl_types_chr,
+        dep_var_nm_1L_chr = ds_smry_ls$dep_var_nm_1L_chr, predr_var_nm_1L_chr = mdl_smry_ls$predr_var_nm_1L_chr,
+        predr_var_desc_1L_chr = mdl_smry_ls$predr_var_nm_1L_chr, predr_vals_dbl = mdl_smry_ls$predr_vals_dbl,
         path_to_write_to_1L_chr = path_to_write_to_1L_chr, new_dir_nm_1L_chr =  "A_Candidate_Mdls_Cmprsns",
-        mdl_types_lup = mdl_types_lup) # Takes more than vignette time limit to render. Need to add and link to report summarising output.
-smry_of_sngl_predr_mdls_tb # Make this a class with a print method
+        mdl_types_lup = mdl_smry_ls$mdl_types_lup) # Takes more than vignette time limit to render. Need to add and link to report summarising output.
+mdl_smry_ls$smry_of_sngl_predr_mdls_tb # Make this a class with a print method
 ```
 
 Identify the highest performing model in each category of candidate model using [STATE CRITERION].
 
 ```{r}
-prefd_mdl_types_chr <- make_prefd_mdls_vec(smry_of_sngl_predr_mdls_tb,
-                                           choose_from_pfx_chr = choose_from_pfx_chr)
+mdl_smry_ls$prefd_mdl_types_chr <- make_prefd_mdls_vec(mdl_smry_ls$smry_of_sngl_predr_mdls_tb,
+                                           choose_from_pfx_chr = mdl_smry_ls$choose_from_pfx_chr)
+mdl_smry_ls$prefd_mdl_types_chr
 ```
-
 You can override the selections based on the previous criterion and instead use your own judgment (possibly based on visual inspection of density plots) to specify your preferred model types, in descending order of preference.
 
 ```{r}
-prefd_mdl_types_chr <- c("GLM_GSN_LOG","OLS_CLL")
+mdl_smry_ls$prefd_mdl_types_chr <- c("GLM_GSN_LOG","OLS_CLL")
 ```
 
 Next, compare all of candidate predictors using the most preferred model type.
 
 ```{r}
-max_nbr_of_boruta_mdl_runs_int = 300L
-predr_cmprsns_tb <- write_predr_cmprsn_outps(data_tb = bl_tb,
+mdl_smry_ls$max_nbr_of_boruta_mdl_runs_int = 300L
+mdl_smry_ls$predr_cmprsns_tb <- write_predr_cmprsn_outps(data_tb = bl_tb,
                                              path_to_write_to_1L_chr = path_to_write_to_1L_chr,
                                              new_dir_nm_1L_chr = "B_Candidate_Predrs_Cmprsns",
-                                             dep_var_nm_1L_chr = dep_var_nm_1L_chr, 
-                                             candidate_predrs_chr = candidate_predrs_chr,
-                                             max_nbr_of_boruta_mdl_runs_int = max_nbr_of_boruta_mdl_runs_int)
-predr_cmprsns_tb # Add report and class with print method
+                                             dep_var_nm_1L_chr = ds_smry_ls$dep_var_nm_1L_chr, 
+                                             candidate_predrs_chr = ds_smry_ls$candidate_predrs_chr,
+                                             max_nbr_of_boruta_mdl_runs_int = mdl_smry_ls$max_nbr_of_boruta_mdl_runs_int)
+mdl_smry_ls$predr_cmprsns_tb # Add report and class with print method
 
 ```
 Now, prepare a summary table of the performance of each model of the most preferred model type (one model for each candidate predictor).
 
 ```{r}
-    smry_of_mdl_sngl_predrs_tb <- write_mdl_type_multi_outps(data_tb = bl_tb,
-        n_folds_1L_int = n_folds_1L_int, predrs_var_nms_chr = predr_cmprsns_tb$predr_chr,
-        mdl_type_1L_chr = prefd_mdl_types_chr[1], dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+    mdl_smry_ls$smry_of_mdl_sngl_predrs_tb <- write_mdl_type_multi_outps(data_tb = bl_tb,
+        n_folds_1L_int = mdl_smry_ls$n_folds_1L_int, predrs_var_nms_chr = mdl_smry_ls$predr_cmprsns_tb$predr_chr,
+        mdl_type_1L_chr = mdl_smry_ls$prefd_mdl_types_chr[1], dep_var_nm_1L_chr = ds_smry_ls$dep_var_nm_1L_chr,
         path_to_write_to_1L_chr = path_to_write_to_1L_chr, new_dir_nm_1L_chr = "C_Predrs_Sngl_Mdl_Cmprsns",
-        fl_nm_pfx_1L_chr = "C_PREDR", mdl_types_lup = mdl_types_lup) 
-smry_of_mdl_sngl_predrs_tb # Add report and class with print method
+        fl_nm_pfx_1L_chr = "C_PREDR", mdl_types_lup = mdl_smry_ls$mdl_types_lup) 
+mdl_smry_ls$smry_of_mdl_sngl_predrs_tb # Add report and class with print method
 ```
 
 We rerun each of these models, but this time add all our candidate covariates to each model. We create a summary table of the performance of each of the updated models.
 
 ```{r}
-bl_tb <- scored_data_tb %>% transform_ds_for_tstng(candidate_predrs_chr = candidate_predrs_chr,
-        covar_var_nms_chr = candidate_covar_nms_chr, remove_all_mssng_1L_lgl = T,
-        round_val_1L_chr = round_bl_val_1L_chr)
-mdls_with_covars_smry_tb <- write_mdl_type_covars_mdls(bl_tb,
-        dep_var_nm_1L_chr = dep_var_nm_1L_chr, predrs_var_nms_chr = candidate_predrs_chr,
-        covar_var_nms_chr = candidate_covar_nms_chr, mdl_type_1L_chr = prefd_mdl_types_chr[1],
+bl_tb <- scored_data_tb %>% transform_ds_for_tstng(candidate_predrs_chr = ds_smry_ls$candidate_predrs_chr,
+        covar_var_nms_chr = ds_smry_ls$candidate_covar_nms_chr, remove_all_mssng_1L_lgl = T,
+        round_val_1L_chr = ds_smry_ls$round_bl_val_1L_chr)
+mdl_smry_ls$mdls_with_covars_smry_tb <- write_mdl_type_covars_mdls(bl_tb,
+        dep_var_nm_1L_chr = ds_smry_ls$dep_var_nm_1L_chr, predrs_var_nms_chr = ds_smry_ls$candidate_predrs_chr,
+        covar_var_nms_chr = ds_smry_ls$candidate_covar_nms_chr, mdl_type_1L_chr = mdl_smry_ls$prefd_mdl_types_chr[1],
         path_to_write_to_1L_chr = path_to_write_to_1L_chr, new_dir_nm_1L_chr = "D_Predr_Covars_Cmprsn",
         fl_nm_pfx_1L_chr = "D_CT",
-        mdl_types_lup = mdl_types_lup)
-mdls_with_covars_smry_tb # Add report and class with print method
+        mdl_types_lup = mdl_smry_ls$mdl_types_lup)
+mdl_smry_ls$mdls_with_covars_smry_tb # Add report and class with print method. Note negative values
 ```
 Identify which covariates are significant predictors in any of the models.
 
 ```{r}
-signt_covars_chr <- get_signft_covars(mdls_with_covars_smry_tb = mdls_with_covars_smry_tb,
-                                      covar_var_nms_chr = candidate_covar_nms_chr) # THIS FN NEEDS FIXING FOR CAT VARS
+mdl_smry_ls$signt_covars_chr <- get_signft_covars(mdls_with_covars_smry_tb = mdl_smry_ls$mdls_with_covars_smry_tb,
+                                      covar_var_nms_chr = ds_smry_ls$candidate_covar_nms_chr) # THIS FN NEEDS FIXING FOR CAT VARS
+mdl_smry_ls$signt_covars_chr
 ```
 
 We can override the covariates to select (in the below example we have opted not to do so and use the significant predictors selected in the previous step).
 
 ```{r}
-prefd_covars_chr <- NA_character_
-    if (is.na(prefd_covars_chr))
-        prefd_covars_chr <- signt_covars_chr
+mdl_smry_ls$prefd_covars_chr <- NA_character_
+    if (is.na(mdl_smry_ls$prefd_covars_chr))
+        mdl_smry_ls$prefd_covars_chr <- mdl_smry_ls$signt_covars_chr
 ```
 
 ```{r}
-    dud_tb <- write_mdl_type_multi_outps(data_tb = bl_tb, n_folds_1L_int = NULL,
-        start_1L_chr = NA_character_, predrs_var_nms_chr = predr_cmprsns_tb$predr_chr,
-        covar_var_nms_chr = candidate_covar_nms_chr, mdl_type_1L_chr = prefd_mdl_types_chr[2],
-        dep_var_nm_1L_chr = dep_var_nm_1L_chr, path_to_write_to_1L_chr = path_to_write_to_1L_chr,
-        new_dir_nm_1L_chr = "E_Predrs_W_Covars_Sngl_Mdl_Cmprsns", mdl_types_lup = mdl_types_lup, fl_nm_pfx_1L_chr = "E_CK_CV")
-    predr_vars_nms_ls <- make_predr_vars_nms_ls(main_predrs_chr = predr_cmprsns_tb$predr_chr,
-        covars_ls = list(prefd_covars_chr))
+    empty_tb <- write_mdl_type_multi_outps(data_tb = bl_tb, n_folds_1L_int = NULL,
+        start_1L_chr = NA_character_, predrs_var_nms_chr = mdl_smry_ls$predr_cmprsns_tb$predr_chr,
+        covar_var_nms_chr = ds_smry_ls$candidate_covar_nms_chr, mdl_type_1L_chr = mdl_smry_ls$prefd_mdl_types_chr[2],
+        dep_var_nm_1L_chr = ds_smry_ls$dep_var_nm_1L_chr, path_to_write_to_1L_chr = path_to_write_to_1L_chr,
+        new_dir_nm_1L_chr = "E_Predrs_W_Covars_Sngl_Mdl_Cmprsns", mdl_types_lup = mdl_smry_ls$mdl_types_lup, fl_nm_pfx_1L_chr = "E_CK_CV")
+    mdl_smry_ls$predr_vars_nms_ls <- make_predr_vars_nms_ls(main_predrs_chr = mdl_smry_ls$predr_cmprsns_tb$predr_chr,
+        covars_ls = list(mdl_smry_ls$prefd_covars_chr))
 ```
 
 ```{r}
-mdl_nms_ls <- make_mdl_nms_ls(predr_vars_nms_ls, mdl_types_chr = prefd_mdl_types_chr)
+mdl_smry_ls$mdl_nms_ls <- make_mdl_nms_ls(mdl_smry_ls$predr_vars_nms_ls, mdl_types_chr = mdl_smry_ls$prefd_mdl_types_chr)
 ```
 
 ```{r}
 outp_smry_ls <- list(scored_data_tb = scored_data_tb, 
-                     smry_of_sngl_predr_mdls_tb = smry_of_sngl_predr_mdls_tb,
-                     prefd_mdl_types_chr = prefd_mdl_types_chr, 
-                     predr_cmprsns_tb = predr_cmprsns_tb,
-                     smry_of_mdl_sngl_predrs_tb = smry_of_mdl_sngl_predrs_tb,
-                     mdls_with_covars_smry_tb = mdls_with_covars_smry_tb,
-                     signt_covars_chr = signt_covars_chr, 
-                     prefd_covars_chr = prefd_covars_chr,
-                     dep_var_nm_1L_chr = dep_var_nm_1L_chr, 
-                     predr_vars_nms_ls = predr_vars_nms_ls,
-                     mdl_nms_ls = mdl_nms_ls, 
-                     id_var_nm_1L_chr = id_var_nm_1L_chr,
-                     round_var_nm_1L_chr = round_var_nm_1L_chr,
-                     round_bl_val_1L_chr = round_bl_val_1L_chr,
+                     smry_of_sngl_predr_mdls_tb = mdl_smry_ls$smry_of_sngl_predr_mdls_tb,
+                     prefd_mdl_types_chr = mdl_smry_ls$prefd_mdl_types_chr, 
+                     predr_cmprsns_tb = mdl_smry_ls$predr_cmprsns_tb,
+                     smry_of_mdl_sngl_predrs_tb = mdl_smry_ls$smry_of_mdl_sngl_predrs_tb,
+                     mdls_with_covars_smry_tb = mdl_smry_ls$mdls_with_covars_smry_tb,
+                     signt_covars_chr = mdl_smry_ls$signt_covars_chr, 
+                     prefd_covars_chr = mdl_smry_ls$prefd_covars_chr,
+                     dep_var_nm_1L_chr = ds_smry_ls$dep_var_nm_1L_chr, 
+                     predr_vars_nms_ls = mdl_smry_ls$predr_vars_nms_ls,
+                     mdl_nms_ls = mdl_smry_ls$mdl_nms_ls, 
+                     id_var_nm_1L_chr = ds_smry_ls$id_var_nm_1L_chr,
+                     round_var_nm_1L_chr = ds_smry_ls$round_var_nm_1L_chr,
+                     round_bl_val_1L_chr = ds_smry_ls$round_bl_val_1L_chr,
                      path_to_write_to_1L_chr = path_to_write_to_1L_chr, 
                      seed_1L_int = seed_1L_int,
-                     n_folds_1L_int = n_folds_1L_int, 
-                     max_nbr_of_boruta_mdl_runs_int = max_nbr_of_boruta_mdl_runs_int,
-                     mdl_types_lup = mdl_types_lup, 
+                     n_folds_1L_int = mdl_smry_ls$n_folds_1L_int, 
+                     max_nbr_of_boruta_mdl_runs_int = mdl_smry_ls$max_nbr_of_boruta_mdl_runs_int,
+                     mdl_types_lup = mdl_smry_ls$mdl_types_lup, 
                      file_paths_chr = list.files(path_to_write_to_1L_chr, recursive = T))
 ```
 
