--- a/vignettes/TTU.Rmd
+++ b/vignettes/TTU.Rmd
@@ -23,3 +23,4 @@ The following vignettes demonstrate some of the tools currently included in the 
 
 - [Replication dataset](Replication_DS.html)
 - [Health utility scoring tools](Utility_Scoring.html)
+- [Modelling Transfer to Utility](Model_TTU.html)
