Updated modelling ttu vignette

--- a/vignettes/Replication_DS.Rmd
+++ b/vignettes/Replication_DS.Rmd
@@ -22,10 +22,9 @@ The replication dataset distributed with the TTU package is a purely synthetic (
 An overview of the contents of the replication dataset is provided in a data dictionary that can be accessed with the following command.
 
 ```{r message=FALSE}
+data("repln_ds_dict_r3", package = "TTU")
 dictionary_tb <- repln_ds_dict_r3
 ```
-
-The following lines print the data dictionary as a table.
 
 ```{r ddic}
 dictionary_tb %>%
@@ -39,6 +38,7 @@ dictionary_tb %>%
 The replication dataset itself can be accessed using the following command.
 
 ```{r}
+data("replication_popl_tb", package = "TTU")
 raw_data_tb <- replication_popl_tb 
 ```
 
@@ -49,7 +49,7 @@ raw_data_tb <- raw_data_tb %>%
   ready4use::add_labels_from_dictionary(dictionary_tb)
 ```
 
-The following command prints the first ten cases from the replication dataset as a table, using variable labels as column names.
+The first six cases from the replication dataset are reproduced below, using variable labels as column headings.
 
 ```{r repds}
 raw_data_tb %>%
