--- a/vignettes/Model_TTU.Rmd
+++ b/vignettes/Model_TTU.Rmd
@@ -7,7 +7,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 library(TTU)
 ```
 ## Set-up workspace and import data
@@ -24,12 +24,12 @@ We next create a directory in which we will write all output.
 path_to_write_to_1L_chr <- "Output" 
 dir.create(path_to_write_to_1L_chr)
 ```
-We now specify the paths to the input data and data dictionary. For this example we are going to use a slightly trimmed down version of the TTU replication dataset and its dictionary[which are described in another vignette article](Replication_DS.html).
+We now specify the paths to the input data and its data dictionary. For this example we are going to use a slightly trimmed down version of the TTU replication dataset and its dictionary [which are described in another vignette article](Replication_DS.html).
 
 ```{r}
 path_to_inp_data_1L_chr <- "Data" 
 dir.create(path_to_inp_data_1L_chr)
-write.csv(replication_popl_tb %>% dplyr::select(-BADS,-GAD7, -OASIS,-SCARED),"Data/data.csv", row.names=FALSE, col.names = T)
+write.csv(replication_popl_tb %>% dplyr::select(-BADS,-GAD7, -OASIS,-SCARED),"Data/data.csv", row.names=FALSE)
 write.csv(repln_ds_dict_r3,"Data/dictionary.csv", row.names=FALSE)
 ```
 We can now read the data files into local memory.
@@ -45,20 +45,19 @@ We now convert study participant responses to the AQoL-6D questionnaire to healt
 ```{r message=FALSE, results='hide', warning=FALSE}
 scored_data_tb <- data_tb %>% add_adol6d_scores() 
 ```
-The dataset we are using has `r nrow(scored_data_tb)` records on `rlength(scored_data_tb$fkClientID %>% unique())`) study participants. The first six records are reproduced below.
+The dataset we are using has `r nrow(scored_data_tb)` records on `r length(scored_data_tb$fkClientID %>% unique())`) study participants. The first six records are reproduced below.
 ```{r }
 scored_data_tb %>%
     head() %>%
   ready4show::print_table(output_type_1L_chr = "HTML",
-                          caption_1L_chr = "Input dataset", 
-                          use_lbls_as_col_nms_1L_lgl = T)
+                          caption_1L_chr = "Input dataset")
 ```
 
-We next create and object `ds_smry_ls` to store a description of some structural properties of the dataset such as:
+We next create an object `ds_smry_ls` to store a description of some structural properties of the dataset such as:
 
- - the name of the dependent variable (ie total health utility score)
- - the names of the variables we will be exploring as candidate predictors and as candidate covariates in our modelling
- - the names of the variables variables for unique participant identified and data collection round; and
+ - the name of the dependent variable (ie total health utility score);
+ - the names of the variables we will be exploring as candidate predictors and as candidate covariates in our modelling;
+ - the names of the variables for unique participant identifier and data collection round; and
  - the value of the data collection round variable for the baseline timepoint.
 
 ```{r}
@@ -70,7 +69,7 @@ ds_smry_ls <- list(candidate_predrs_chr = c("K6","PHQ9"),
                    round_bl_val_1L_chr = "Baseline")
 ```
 
-We now create a lookup table with summary information on candidate predictors and add it to the  `ds_smry_ls` object.
+We now create a lookup table with summary information (brief description, class, range of allowable values, factor by which it should be scaled in modelling) on candidate predictors and add this table to the  `ds_smry_ls` object.
 
 ```{r}
 ds_smry_ls$predictors_lup <- TTU_predictors_lup(make_pt_TTU_predictors_lup(short_name_chr = ds_smry_ls$candidate_predrs_chr,
@@ -84,17 +83,18 @@ ds_smry_ls$predictors_lup <- TTU_predictors_lup(make_pt_TTU_predictors_lup(short
                                               covariate_lgl = F))
 ```
 
-## Test candidate models, predictors and confounders
+## Test candidate models, predictors and covariates
+Our first main task is to test which models, predictors and covariates perform best. This tasks can be broken down into the following steps.
+
+### Preliminary tasks
 We next create another lookup table (or as in the below example, use an existing lookup table) with summary information about the types of models we might test.
 
 ```{r}
 data("mdl_types_lup",package = "TTU") 
 mdl_types_lup %>%
     ready4show::print_table(output_type_1L_chr = "HTML",
-                          caption_1L_chr = "Model types lookup table", 
-                          use_lbls_as_col_nms_1L_lgl = T)
+                          caption_1L_chr = "Model types lookup table")
 ```
-
 We add this lookup table to a new object, `mdl_smry_ls` which stores information about the candidate models we will be using. We can use this step to select a subset of the models from the lookup table to compare. In the below example, we have selected all of the available GLM and OLS models.
 
 ```{r}
@@ -114,22 +114,24 @@ bl_tb <- transform_ds_for_tstng(scored_data_tb,
                                 round_val_1L_chr = ds_smry_ls$round_bl_val_1L_chr)
  
 ```
+
 The first six records of the slimmed down dataset are as follows.
+
 ```{r}
 bl_tb %>%
   head() %>%
     ready4show::print_table(output_type_1L_chr = "HTML",
-                          caption_1L_chr = "Slimmed down prediction dataset", 
-                          use_lbls_as_col_nms_1L_lgl = T)
+                          caption_1L_chr = "Slimmed down prediction dataset")
   
 ```
-
+### Identify most highly correlated candidate predictor
 By exploring correlations in the slimmed down dataset, we can reorder our vector of candidate predictors to reflect the descending order of correlation with the dependent variable. 
 
 ```{r}
 ds_smry_ls$candidate_predrs_chr <- reorder_cndt_predrs_chr(ds_smry_ls$candidate_predrs_chr,
         data_tb = bl_tb, dep_var_nm_1L_chr = ds_smry_ls$dep_var_nm_1L_chr)
 ```
+
 Based on this reordering, we can specify the the candidate predictor with the highest correlation with our utility variable, adding its description to `mdl_smry_ls`.
 
 ```{r}
@@ -140,6 +142,7 @@ mdl_smry_ls$predr_var_desc_1L_chr <- ds_smry_ls$predictors_lup %>% ready4fun::ge
 ```{r}
 mdl_smry_ls$predr_var_desc_1L_chr
 ```
+### Test all candidate models using preferred single predictor
 Using the metadata from the predictors lookup table, we now create a vector of the range of potential integer values of the most highly correlated predictor.
 
 ```{r}
@@ -151,7 +154,7 @@ mdl_smry_ls$predr_vals_dbl
 ```
 We now compare all candidate model types, each using only the highest correlated candidate predictor (`r mdl_smry_ls$predr_var_desc_1L_chr`). The `write_sngl_predr_multi_mdls_outps` function will write a summary of each model to a new sub-directory of `r path_to_write_to_1L_chr`, which takes the name passed to the `new_dir_nm_1L_chr` argument. 
 
-```{r}
+```{r warning = FALSE, message=FALSE}
 mdl_smry_ls$n_folds_1L_int <- 10L
 mdl_smry_ls$smry_of_sngl_predr_mdls_tb <- write_sngl_predr_multi_mdls_outps(data_tb = bl_tb,
         n_folds_1L_int = mdl_smry_ls$n_folds_1L_int, mdl_types_chr = mdl_smry_ls$mdl_types_chr,
@@ -162,38 +165,40 @@ mdl_smry_ls$smry_of_sngl_predr_mdls_tb <- write_sngl_predr_multi_mdls_outps(data
         mdl_types_lup = mdl_smry_ls$mdl_types_lup) 
 
 ```
-```{r include=F}
-# paste0(path_to_write_to_1L_chr,"/","A_Candidate_Mdls_Cmprsns") %>% list.files(pattern = "\\.png$", full.names = T) %>%
-# knitr::include_graphics()
+
+The models that are tested are written to the "A_Candidate_Mdls_Cmprsns" sub-directory of "Output" along with five plots for each model. The plots for the first model we tested are reproduced below.
+
+```{r }
+paste0(path_to_write_to_1L_chr,"/","A_Candidate_Mdls_Cmprsns") %>% list.files(pattern = "\\.png$", full.names = T) %>% `[`(1:5) %>%
+knitr::include_graphics()
 ```
 
 The function also outputs a table summarising the performance of each of the candidate models.
+
 ```{r}
 mdl_smry_ls$smry_of_sngl_predr_mdls_tb %>%
     ready4show::print_table(output_type_1L_chr = "HTML",
-                          caption_1L_chr = "Model performance for highest correlated predictor using baseline data", 
-                          use_lbls_as_col_nms_1L_lgl = T)
+                          caption_1L_chr = "Model performance for highest correlated predictor using baseline data")
 ```
+We can now identify the highest performing model in each category of candidate model based on the testing R^2^ statistic (RsquaredP in the previous table).
 
-We can now identify the highest performing model in each category of candidate model based on the testing R^2^ statistic.
-
-```{r}
+```{r message=FALSE}
 mdl_smry_ls$prefd_mdl_types_chr <- make_prefd_mdls_vec(mdl_smry_ls$smry_of_sngl_predr_mdls_tb,
                                            choose_from_pfx_chr = mdl_smry_ls$choose_from_pfx_chr)
 ```
 ```{r}
 mdl_smry_ls$prefd_mdl_types_chr
 ```
-
-We can override the selections based on this criterion and instead incorporate other considerations (possibly based on visual inspection of density plots). We do just this in the following command, specifying new preferred model types, in descending order of preference.
+We can override these automated selections and instead incorporate other considerations (possibly based on judgments informed by visual inspection of the density plots). We do this in the following command, specifying new preferred model types, in descending order of preference.
 
 ```{r}
 mdl_smry_ls$prefd_mdl_types_chr <- c("GLM_GSN_LOG","OLS_CLL")
 ```
 
-Having identified our preferred model types we can now compare all of candidate predictors using the most preferred model type.
+### Compare all candidate predictors using preferred model
+We can now compare all of our candidate single predictors using the most preferred model type.
 
-```{r}
+```{r message=FALSE, results='hide'}
 mdl_smry_ls$max_nbr_of_boruta_mdl_runs_int = 300L
 mdl_smry_ls$predr_cmprsns_tb <- write_predr_cmprsn_outps(data_tb = bl_tb,
                                              path_to_write_to_1L_chr = path_to_write_to_1L_chr,
@@ -203,28 +208,48 @@ mdl_smry_ls$predr_cmprsns_tb <- write_predr_cmprsn_outps(data_tb = bl_tb,
                                              max_nbr_of_boruta_mdl_runs_int = mdl_smry_ls$max_nbr_of_boruta_mdl_runs_int)
 ```
 
+The previous call to the `write_predr_cmprsn_outps`{.R} function saved the tested models along with the model plots reproduced below in the "B_Candidate_Predrs_Cmprsns" sub-directory of "Output".
+
+```{r }
+paste0(path_to_write_to_1L_chr,"/","B_Candidate_Predrs_Cmprsns") %>% list.files(pattern = "\\.png$", full.names = T) %>%
+knitr::include_graphics()
+```
+
+These results are also viewable as a table.
+
 ```{r}
 mdl_smry_ls$predr_cmprsns_tb %>%
     ready4show::print_table(output_type_1L_chr = "HTML",
-                          caption_1L_chr = "Comparison of all candidate predictors using preferred model", 
-                          use_lbls_as_col_nms_1L_lgl = T)
+                          caption_1L_chr = "Comparison of all candidate predictors using preferred model")
 ```
-Now, we prepare a summary table of the performance of each model of the most preferred model type  for each candidate predictor.
+### Compare single predictor model performance across all candidate predictors
+Now, we compare the performance of single predictor models of our preferred model type (in our case, a `r mdl_smry_ls$mdl_types_lup %>% ready4fun::get_from_lup_obj(target_var_nm_1L_chr = "long_name_chr",match_value_xx = mdl_smry_ls$prefd_mdl_types_chr[1], match_var_nm_1L_chr = "short_name_chr", evaluate_lgl = F)`) for each candidate predictor.
 
-```{r}
+```{r message=FALSE, warning=F}
     mdl_smry_ls$smry_of_mdl_sngl_predrs_tb <- write_mdl_type_multi_outps(data_tb = bl_tb,
         n_folds_1L_int = mdl_smry_ls$n_folds_1L_int, predrs_var_nms_chr = mdl_smry_ls$predr_cmprsns_tb$predr_chr,
         mdl_type_1L_chr = mdl_smry_ls$prefd_mdl_types_chr[1], dep_var_nm_1L_chr = ds_smry_ls$dep_var_nm_1L_chr,
         path_to_write_to_1L_chr = path_to_write_to_1L_chr, new_dir_nm_1L_chr = "C_Predrs_Sngl_Mdl_Cmprsns",
         fl_nm_pfx_1L_chr = "C_PREDR", mdl_types_lup = mdl_smry_ls$mdl_types_lup) 
 ```
+The previous call to the `write_mdl_type_multi_outps`{.R} function saves the tested models along with the two plots for each model in the "C_Predrs_Sngl_Mdl_Cmprsns" sub-directory of "Output". The plots for the model using the best performing predictor (`mdl_smry_ls$predr_var_desc_1L_chr`) are
+reproduced below. 
+
+```{r }
+paste0(path_to_write_to_1L_chr,"/","C_Predrs_Sngl_Mdl_Cmprsns") %>% list.files(pattern = "\\.png$", full.names = T) %>%
+  purrr::keep(stringr::str_detect(.,paste0("_",mdl_smry_ls$predr_var_nm_1L_chr,"_"))) %>%
+knitr::include_graphics()
+```
+
+The performance of each single predictor model can also be summarised in a table.
+
 ```{r}
 mdl_smry_ls$smry_of_mdl_sngl_predrs_tb %>%
     ready4show::print_table(output_type_1L_chr = "HTML",
-                          caption_1L_chr = "Preferred single predictor model performance by candidate predictor", 
-                          use_lbls_as_col_nms_1L_lgl = T)
+                          caption_1L_chr = "Preferred single predictor model performance by candidate predictor")
 ```
-We rerun each of these models, but this time add all our candidate covariates to each model. We create a summary table of the performance of each of the updated models.
+### Compare candidate covariates
+We rerun each of the models from the previous step, but this time add all our candidate covariates to each model. 
 
 ```{r}
 bl_tb <- scored_data_tb %>% transform_ds_for_tstng(candidate_predrs_chr = ds_smry_ls$candidate_predrs_chr,
@@ -237,13 +262,15 @@ mdl_smry_ls$mdls_with_covars_smry_tb <- write_mdl_type_covars_mdls(bl_tb,
         fl_nm_pfx_1L_chr = "D_CT",
         mdl_types_lup = mdl_smry_ls$mdl_types_lup)
 ```
+
+The updated models are saved to the "D_Predr_Covars_Cmprsn" subdirectory of "Output" and we can summarise the performance of each of the updated models, along with all model terms, in a table.
+
 ```{r}
 mdl_smry_ls$mdls_with_covars_smry_tb %>%
     ready4show::print_table(output_type_1L_chr = "HTML",
                           caption_1L_chr = "Preferred performance of models with covariate predictors by candidate predictor", 
                           use_lbls_as_col_nms_1L_lgl = T)
 ```
-
 We can now identify which covariates are significant predictors in any of the models.
 
 ```{r}
@@ -254,7 +281,7 @@ mdl_smry_ls$signt_covars_chr <- get_signft_covars(mdls_with_covars_smry_tb = mdl
 ```{r}
 mdl_smry_ls$signt_covars_chr
 ```
-We can override the covariates to select (in the below example we have opted not to do so and continue to use the significant predictors selected by the algorithm in the previous step).
+We can override the covariates to select, potentially because we want to select only covariates that are significant for all or most of the models. However, in the below example we have opted not to do so and continue to use the significant predictor (`r mdl_smry_ls$signt_covars_chr`) selected by the algorithm in the previous step.
 
 ```{r}
 mdl_smry_ls$prefd_covars_chr <- NA_character_
@@ -262,13 +289,34 @@ mdl_smry_ls$prefd_covars_chr <- NA_character_
         mdl_smry_ls$prefd_covars_chr <- mdl_smry_ls$signt_covars_chr
 ```
 
-We now conclude our model testing by finalising the list of the models that we intend to use when exploring the time series data.
-```{r}
+### Test preferred model with preferred covariates for each candidate predictor
+We now conclude our model testing by rerunning the previous step, except confining our covariates to those we prefer.
+
+```{r warning = F}
     empty_tb <- write_mdl_type_multi_outps(data_tb = bl_tb, n_folds_1L_int = NULL,
         start_1L_chr = NA_character_, predrs_var_nms_chr = mdl_smry_ls$predr_cmprsns_tb$predr_chr,
-        covar_var_nms_chr = ds_smry_ls$candidate_covar_nms_chr, mdl_type_1L_chr = mdl_smry_ls$prefd_mdl_types_chr[2],
+        covar_var_nms_chr = mdl_smry_ls$prefd_covars_chr, mdl_type_1L_chr = mdl_smry_ls$prefd_mdl_types_chr[1],
         dep_var_nm_1L_chr = ds_smry_ls$dep_var_nm_1L_chr, path_to_write_to_1L_chr = path_to_write_to_1L_chr,
         new_dir_nm_1L_chr = "E_Predrs_W_Covars_Sngl_Mdl_Cmprsns", mdl_types_lup = mdl_smry_ls$mdl_types_lup, fl_nm_pfx_1L_chr = "E_CK_CV")
+
+```
+
+The previous call to the `write_mdl_type_multi_outps`{.R} function saves the tested models along with the two plots for each model in the "E_Predrs_W_Covars_Sngl_Mdl_Cmprsns" sub-directory of "Output". The plots for the model using the best performing predictor (`mdl_smry_ls$predr_var_desc_1L_chr`) are
+reproduced below. 
+
+```{r }
+paste0(path_to_write_to_1L_chr,"/","E_Predrs_W_Covars_Sngl_Mdl_Cmprsns") %>% list.files(pattern = "\\.png$", full.names = T) %>%
+  purrr::keep(stringr::str_detect(.,paste0("_",mdl_smry_ls$predr_var_nm_1L_chr,"_"))) %>%
+knitr::include_graphics()
+```
+
+## Apply preferred model types and predictors to time series data
+The next main step is to use the preferred model types and covariates identified from the preceding analysis of cross-sectional data in time series analysis. 
+
+### Preliminary steps
+First we summarise what are the combinations of model types, candidate predictors and covariates that we will be using.
+
+```{r}
     mdl_smry_ls$predr_vars_nms_ls <- make_predr_vars_nms_ls(main_predrs_chr = mdl_smry_ls$predr_cmprsns_tb$predr_chr,
         covars_ls = list(mdl_smry_ls$prefd_covars_chr))
 ```
@@ -276,7 +324,12 @@ We now conclude our model testing by finalising the list of the models that we i
 ```{r}
 mdl_smry_ls$mdl_nms_ls <- make_mdl_nms_ls(mdl_smry_ls$predr_vars_nms_ls, mdl_types_chr = mdl_smry_ls$prefd_mdl_types_chr)
 ```
-In preparation for the time series modelling, we create a composite object `outp_smry_ls` that contains the key input and output data used in testing models, predictors and covariates.
+```{r}
+mdl_smry_ls$mdl_nms_ls %>% purrr::flatten_chr()
+```
+
+We now create a composite object `outp_smry_ls` that contains the key input and output data used in testing models, predictors and covariates that we will need for the time series modelling.
+
 ```{r}
 outp_smry_ls <- list(scored_data_tb = scored_data_tb, 
                      smry_of_sngl_predr_mdls_tb = mdl_smry_ls$smry_of_sngl_predr_mdls_tb,
@@ -299,24 +352,32 @@ outp_smry_ls <- list(scored_data_tb = scored_data_tb,
                      mdl_types_lup = mdl_smry_ls$mdl_types_lup, 
                      file_paths_chr = list.files(path_to_write_to_1L_chr, recursive = T))
 ```
-## Apply selected models to selected predictors in time series models
+### Time series modelling
+Next we test each of the `r length(mdl_smry_ls$mdl_nms_ls %>% purrr::flatten_chr())` time series models we specified in the previous step. For this goal, we use the `write_ts_mdls_from_alg_outp`{.R} function that makes a call to the Stan program. Note that for this example we have run only 500 iterations - in practice this number would likely be several times higher. A limitation of the current version of the `write_ts_mdls_from_alg_outp` function is that it only works with the following two model types: 
+
+- `r mdl_smry_ls$mdl_types_lup %>% ready4fun::get_from_lup_obj(target_var_nm_1L_chr = "long_name_chr",match_value_xx = mdl_smry_ls$prefd_mdl_types_chr[1], match_var_nm_1L_chr = "short_name_chr", evaluate_lgl = F)`
+- `r mdl_smry_ls$mdl_types_lup %>% ready4fun::get_from_lup_obj(target_var_nm_1L_chr = "long_name_chr",match_value_xx = mdl_smry_ls$prefd_mdl_types_chr[2], match_var_nm_1L_chr = "short_name_chr", evaluate_lgl = F)`
+
+We aim to address this limitation in future releases of TTU.
+
 ```{r}
 outp_smry_ls <- write_ts_mdls_from_alg_outp(outp_smry_ls,
                                             fn_ls = list(fit_gsn_log_lnk,fit_clg_log_tfmn),
                                             backend_1L_chr = "cmdstanr",
                                             iters_1L_int = 500L)
 ```
-## Create shareable version of predictive models
-It is not appropriate to share the raw models created in the previous step publicly (as they contain confidential data and are very large in file size). We therefore create shareable versions that are relatively small in file size and contain no confidential data, but that have the coefficients from the original models. 
 
-If you have a Dataverse account you can add details for your account (which will differ from the ones we use for ours below) to the `outp_smry_ls` object. If you do not have  a Dataverse account, do not use the dv_ls argument (or set it to its default value of NULL). 
+### Sharing models
+It may not be appropriate to share the raw models outputted by `write_ts_mdls_from_alg_outp`{.R} as they both may contain confidential data and are very large in file size. We therefore create shareable versions that are relatively small in file size and do not contain the source dataset, but that have the coefficients from the original models. 
+
+If you have a Dataverse account you can add details for your account (which will differ from the ones we use for ours below) to the `outp_smry_ls` object. If you do not have  a Dataverse account, do not add a dv_ls list element (or set it to its default value of NULL). 
 
 ```{r eval=FALSE}
 outp_smry_ls$dv_ls <- list(dv_nm_1L_chr = "firstbounce",
                                ds_url_1L_chr = "https://doi.org/10.7910/DVN/JC6PTV", 
                                parent_dv_dir_1L_chr = "../../../../Data/Dataverse")
 ```
-This following call to `write_shareable_mdls`{.R} writes shareable models to a new subdirectory (G_Shareable) of your nominated output director on your local machine. IF you added details of a Dataverse account in the previous step the function will also push these shareable models to your Dataverse online data repository.
+This following call to `write_shareable_mdls`{.R} writes shareable models to a new subdirectory (G_Shareable) of your nominated output director on your local machine. If you added details of a Dataverse account in the previous step the function will also push these shareable models to your Dataverse online data repository.
 
 ```{r eval=T}
 outp_smry_ls <- write_shareable_mdls(outp_smry_ls,
